[package]
name = "plachta"
version = "0.1.0"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
description = "Atelier series database"
repository = "https://github.com/tirr-c/plachta.git"
readme = "README.md"
license = "AGPL-3.0"

[dependencies]
diesel = { version = "1.3.0", features = ["postgres"] }
diesel-derive-enum = { version = "0.4.3", features = ["postgres"] }
dotenv = "0.13.0"
