[package]
name = "plachta"
version = "0.1.0"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
description = "Atelier series database"
repository = "https://github.com/tirr-c/plachta.git"
readme = "README.md"
license = "AGPL-3.0"

[dependencies]
diesel = { version = "1.3.0", features = ["postgres", "extras"] }
diesel-derive-enum = { version = "0.4.3", features = ["postgres"] }
dotenv = "0.13.0"
juniper = "0.9.2"
actix = "0.5.7"
actix-web = "0.6.10"
failure = "0.1.1"
futures = "0.1.21"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.20"
