[package]
name = "plachta"
version = "0.1.0"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
description = "Atelier series database"
repository = "https://github.com/tirr-c/plachta.git"
readme = "README.md"
license = "AGPL-3.0"

[dependencies]
actix = "0.5.7"
actix-web = "0.6.10"
base64 = "0.9.2"
dotenv = "0.13.0"
failure = "0.1.1"
futures = "0.1.21"
juniper = "0.9.2"
rand = "0.5.1"
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.20"

[dependencies.diesel]
version = "1.3.0"
features = ["postgres", "r2d2", "serde_json"]
default-features = false

[dependencies.diesel-derive-enum]
version = "0.4.3"
features = ["postgres"]

[dependencies.diesel_migrations]
version = "1.3.0"
features = ["postgres"]
